--- a/app/src/main/res/layout/cardview_movie.xml
+++ b/app/src/main/res/layout/cardview_movie.xml
@@ -4,6 +4,7 @@
     android:id="@+id/movieCard"
     android:layout_width="match_parent"
     android:layout_height="@dimen/height_cardview"
+    android:layout_marginBottom="4dp"
     >
 
     <FrameLayout
