--- a/app/src/main/res/layout/fragment_next.xml
+++ b/app/src/main/res/layout/fragment_next.xml
@@ -1,19 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".home.view.HomeActivity"
-    >
+    tools:context=".home.view.fragment.NextFragment">
 
-    <FrameLayout
-        android:id="@+id/home_container"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_next_moviesRecycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    </FrameLayout>
-
-    <include layout="@layout/bottombar" />
-
+    </android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
