--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -10,7 +10,7 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="350dp"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         >
 
@@ -27,7 +27,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                android:background="@drawable/infinitywar"
                 app:layout_collapseMode="parallax"
                 android:fitsSystemWindows="true"
                 />
@@ -62,17 +61,16 @@
                 android:id="@+id/tv_detail_movieName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/movie_title"
                 android:textSize="@dimen/textSize_movieTitle_cardview"
                 android:paddingLeft="@dimen/padding_left_cardview"
                 android:paddingRight="@dimen/padding_right_cardview"
+                android:paddingTop="@dimen/padding_top"
                 />
 
             <TextView
                 android:id="@+id/tv_detail_voteAverage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/movie_vote_average"
                 android:paddingLeft="@dimen/padding_left_cardview"
                 android:paddingRight="@dimen/padding_right_cardview"
                 />
@@ -99,7 +97,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/textSize_detail_overview"
-                android:text="@string/lorem_ipsum"
                 android:layout_gravity="center_horizontal"
                 android:paddingLeft="@dimen/padding_left_overview"
                 android:paddingRight="@dimen/padding_right_overview"
